Fix gap on chat content

--- a/app/components/Home/ChatSection/ChatSection.module.scss
+++ b/app/components/Home/ChatSection/ChatSection.module.scss
@@ -145,7 +145,7 @@
   position: relative;
   display: flex;
   align-items: flex-start;
-  gap: 48px;
+  gap: 32px;
   z-index: 5;
 }
 
